--- a/produtos.html
+++ b/produtos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="produtos.css">
-    <title>Produtos - Barbearia Alura</title>
+    <link rel="stylesheet"  href="style.css">
+    <title>Produtos</title>
 </head>
 <body>
 
@@ -14,8 +14,8 @@
 <nav>
     <ul>
         <li> <a href="index.html">Home</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li> <a href="#">Contatos</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li> <a href="contatos.html">Contatos</a></li>
     </ul>
 </nav>
 </div>
@@ -45,6 +45,11 @@
         </li>
     </ul>
 </main>
+
+<footer>
+    <img src="logo-branco.png" alt="Logo da Barbearia Alura">
+    <p class="copyright"> &copy; Copyright Barbearia Alura - 2024</p>
+</footer>
     
 </body>
 </html>
