--- a/contatos.html
+++ b/contatos.html
@@ -21,6 +21,38 @@
 </div>
     </header>
 
+    <main>
+       <form>
+          <label for="nomeSobrenome">Nome e Sobrenome</label>
+          <input type="text" id="nomeSobrenome">
+
+          <label for="email">Email</label>
+          <input type="text" id="email">
+
+          <label for="telefone">Telefone</label>
+          <input type="text" id="telefone">
+
+          <label for="mensagem">Mensagem</label>
+          <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
+
+          <div>
+            <p>Como prefere nosso contato?</p>
+            <label for="radio-email">Email</label>
+            <input type="radio" name="contatos" id="radio-email">
+
+            <label for="radio-telfone">Telefone</label>
+            <input type="radio" name="contatos" id="radio-telefone">
+
+            <label for="radio-whatsapp">Whatsapp</label>
+            <input type="radio" name="contatos" id="radio-whatsapp">
+          </div>
+
+          <label><input type="checkbox" name="" id="">Gostaria de receber as nossas novidades por e-mail?</label>
+
+          <input type="submit" value="Enviar Formulário">
+       </form>
+    </main>
+
     <footer>
         <img src="logo-branco.png" alt="Logo da Barbearia Alura">
         <p class="copyright"> &copy; Copyright Barbearia Alura - 2024</p>
